--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,5 +10,11 @@
                 ]
             }
         }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
     ]
 }
